kong/kong-ingress-resouce.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - app.sarthusofts.shop
    secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: app.sarthusofts.shop
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port:
              number: 80
